--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: 我的项目文档站点
-site_url: https://yourname.github.io/ReactorUMGOnlineDoc/
+site_url: https://caleb196x.github.io/ReactorUMGOnlineDoc/
 site_author: YourName
 site_description: 使用 MkDocs Material 构建的项目文档网站
 
