--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,15 +1,23 @@
-site_name: 我的项目文档站点
+site_name: ReactorUMG
 site_url: https://caleb196x.github.io/ReactorUMGOnlineDoc/
-site_author: YourName
-site_description: 使用 MkDocs Material 构建的项目文档网站
+site_author: ReactorUMG Team
+site_description: ReactorUMG - React/TypeScript plugin for Unreal UMG/UI
+repo_url: https://github.com/caleb196x/ReactorUMG
+repo_name: GitHub
 
 theme:
   name: material
   language: zh
+  custom_dir: docs/overrides
+  logo: https://pica.zhimg.com/80/v2-74ecd899c7c4cc0258930eaff239a21b_1440w.webp
+  favicon: https://i.stardots.io/wcowin/1750090373988.png
   palette:
-    scheme: default
-    primary: teal
-    accent: pink
+    - scheme: default
+      primary: indigo
+      accent: blue
+    - scheme: slate
+      primary: indigo
+      accent: blue
   font:
     text: Roboto
     code: Roboto Mono
@@ -18,22 +26,55 @@ theme:
   features:
     - navigation.instant
     - navigation.tabs
+    - navigation.expand
     - content.code.copy
     - content.action.edit
     - toc.integrate
+    - announce.dismiss # 可关闭公告栏
+    # - navigation.instant # 页面无刷新切换
+    - navigation.prune # 只渲染可见导航项
+    # - header.autohide  # 自动隐藏头部
+    # - navigation.instant.progress # 页面切换进度条
+    # - navigation.prune # 只渲染可见导航项
+    - navigation.tracking # 滚动时URL锚点自动更新
+    - navigation.tabs # 一级导航显示为顶部Tab
+    # - navigation.tabs.sticky  # Tab栏吸顶
+    - navigation.sections # 侧边栏分组
+    - navigation.top # 返回顶部按钮
+    - navigation.footer # 页脚显示在侧边栏
+    - search.suggest # 搜索建议
+    - search.highlight # 搜索高亮
+    - search.share # 搜索结果分享
+    - toc.follow # 目录跟随滚动
+    # - toc.integrate # 目录集成到侧边栏
+    - navigation.expand # 默认展开所有目录
+    - navigation.indexes # 支持节索引页
+    - content.tabs.link # 支持标签页链接
+    - content.tooltips # 支持鼠标悬浮提示
+    - content.code.copy # 代码块一键复制
+    - content.code.select # 代码块一键全选
+    # - content.action.edit # 编辑按钮
+    # - content.action.view # 查看源码按钮
+    - content.code.annotate # 代码注释
+  icon:
+    repo: fontawesome/brands/github #右上角图标
+    previous: fontawesome/solid/angle-left
+    # top: fontawesome/solid/angles-up
+    alternate: fontawesome/solid/language
+
+repo_url: https://github.com/caleb196x/ReactorUMG # 右上角点击跳转的链接
+repo_name: Wcowin.github.io # 右上角的名字
 
 nav:
   - 首页: index.md
-  - 安装指南:
-      - Windows 安装: install/windows.md
-      - Linux 安装: install/linux.md
-  - 使用手册:
-      - 入门教程: guide/basic.md
-      - 高级用法: guide/advanced.md
-  - API 文档:
-      - 接口参考: api/reference.md
+  - 快速入门: quickstart.md
+  - 样例参考: examples/index.md
+  - API: api/index.md
+  - FAQ: faq.md
 
 markdown_extensions:
+  - abbr
+  - attr_list
   - admonition
   - footnotes
   - toc:
@@ -45,18 +86,155 @@ markdown_extensions:
   - pymdownx.highlight
   - pymdownx.superfences
   - pymdownx.inlinehilite
+  - markdown.extensions.abbr # 支持Markdown文件上方自定义标题标签等
+  - pymdownx.magiclink
+  - pymdownx.blocks.caption
+  - pymdownx.caret
+  - pymdownx.betterem
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.snippets
+  - pymdownx.smartsymbols
+  - pymdownx.tilde
+
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.arithmatex:  
+      generic: true
+  - toc:
+      permalink: true # 固定标题位置为当前位置
+      # baselevel: 2
+      # toc_depth: 3  # 控制标题层级深度
+  - pymdownx.highlight: # 代码块高亮
+      anchor_linenums: true
+      linenums: true # 显示行号
+      auto_title: true # 显示编程语言名称
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.tabbed:
       alternate_style: true
-  - pymdownx.emoji:
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.tasklist:
+      custom_checkbox: true
+
+extra:
+  alternate:
+    - name: 中文
+      link: "javascript:translateTo('chinese_simplified');"
+      lang: zh
+    - name: English
+      link: "javascript:translateTo('english');"
+      lang: en
+    - name: 日本語
+      link: "javascript:translateTo('japanese');"
+      lang: ja
+  generator: true  #删除页脚显示“使用 MkDocs 材料制造”
+  social:
+    - icon: fontawesome/brands/weixin
+      link: https://pic1.zhimg.com/80/v2-8ad8e415b3eb139134b0373ff95c6846_1440w.webp
+    - icon: fontawesome/brands/telegram
+      link: https://t.me/Wcowin
+    - icon: fontawesome/brands/x-twitter 
+      link: https://twitter.com/wcowin_
+      name: Twitter
+    - icon: fontawesome/brands/github
+      link: https://github.com/Wcowin
+      name: Github
+    - icon: fontawesome/brands/bilibili
+      link: https://space.bilibili.com/1407028951/lists/4566631?type=series
+    - icon: fontawesome/solid/file-code
+      link: https://blog.csdn.net/m0_63203517?spm=1000.2115.3001.5343
+      name: CSDN    
+    - icon: fontawesome/regular/envelope
+      link: mailto:<wangkewen821@gmail.com> #联系方式
+      name: Email
 
 plugins:
-  - search
+  - search:
+      # enabled: !ENV [CI, false]
+      separator: '[\s\u200b\-]'
   - glightbox
   
-extra:
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/yourname/my-docs-site
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/yourname
+extra_javascript:
+  # 智谱清言翻译系统
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/glm-config.js
+  - javascripts/glm-config.js
+  - javascripts/glm-translate.js
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/glm-translate.js
+  # - javascripts/translate-config.js
+  # - javascripts/highlight-search.js
+  # - docs/javascripts/translate.js
+  # - https://cdn.staticfile.net/translate.js/3.12.0/translate.js
+  - javascripts/unified-instant-handler.js  # 统一的即时导航处理器
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/unified-instant-handler.js
+  # - javascripts/optimize.js
+  # - javascripts/instant-handler.js
+  # 延迟加载非关键脚本
+  - javascripts/extra.js
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/extra.js  # extra的cdn
+  # - javascripts/mathjax.js
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/view.js
+  # - javascripts/liquid-glass-toc.js  # Liquid Glass TOC 增强效果
+  # - javascripts/font-loader.js
+
+extra_css:
+  # - stylesheets/highlight-search.css
+  - stylesheets/extra.css
+  - stylesheets/extra2.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/extra.css
+  - stylesheets/link.css  #友链
+  # - stylesheets/optimize.css
+  - stylesheets/poem.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/poem.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/link.css  #友链
+  # - stylesheets/card2.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/card2.css
+  - stylesheets/customize.css  #按钮圆角化
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/customize.css  #按钮圆角化
+  # - stylesheets/flink.css
+  # - stylesheets/bannerSlider.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/extra.css # extra.css的CDN
+  # - stylesheets/extra1.css
+  # - stylesheets/video.css
+  # - https://unpkg.com/@waline/client@v2/dist/waline.css
+  # - https://cdn.jsdelivr.net/npm/gitalk@latest/dist/gitalk.css #评论
+  # - ckplayer/css/ckplayer.css
+  # - https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css
+  # - https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/style.css  #字体
+  # - https://static.zeoseven.com/zsft/292/main/result.css #字体
+  - stylesheets/ziti.css  #字体
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/ziti.css #字体
+  # - https://fontsapi.zeoseven.com/292/main/result.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/ziti.css?display=swap
+  # - https://chinese-fonts-cdn.deno.dev/packages/lxgwwenkai/dist/LXGWWenKai-Bold/result.css
+  # - https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css # font-awesome表情支持
+  # - stylesheets/timeline.css
+  # - stylesheets/LiquidGlass.css
+  - about/sty/portfolio.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/about/sty/portfolio.css
+  # - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/stylesheets/poem.css
+
+watch: #监听文件变动自动刷新
+  - docs
+  - mkdocs.yml
+  - docs/overrides
+
+hooks:
+  # - docs/overrides/hooks/socialmedia.py
+  - docs/overrides/hooks/reading_time.py
+  # - docs/overrides/hooks/ai_summary.py  # 添加AI摘要hook
+  - docs/overrides/hooks/related_posts.py
+  # - docs/overrides/hooks/toc_optimizer.py
+  # - docs/overrides/hooks/last_updated.py
+  # - docs/overrides/hooks/reading_progress.py
+  - docs/overrides/hooks/comments.py       # 新添加的文章页面评论系统
+  # - docs/hook-sqlite-js/plugin.py
+
+copyright: Copyright &copy; 2022~2026 ReactorUMG # 左下角的版权声明
