--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  logo: images/logo.png
+  logo: images/TransLogo4.png
   favicon: images/favicon.ico
   features:
     - navigation.instant
